[metadata]
name = eparkhontos
version = 0.0.1
author = Sean Redmond
author_email = github-smr@sneakemail.com
description = Parse and convert ancient Greek archon dates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanredmond/eparkhontos
project_urls =
    Bug Tracker = https://github.com/seanredmond/eparkhontos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

